bug fix 51 & 66, double scroller

--- a/frontend/src/app/modules/complaints/pages/count-all/component/show-complaint-list-modal/show-complaint-list-modal.component.css
+++ b/frontend/src/app/modules/complaints/pages/count-all/component/show-complaint-list-modal/show-complaint-list-modal.component.css
@@ -25,7 +25,7 @@
 /* Ends: header */
 
 .example-viewport {
-    height: 100%;
+    height: 55vh;
     width: 100%;
 }
 
@@ -41,8 +41,8 @@
 @media only screen and (max-width: 992px) {
     /* Starts: Modal Container */
     .show-complaint-list-modal-container {
-        height: 100vh;
-        width: 100vw;
+        /* height: 100vh;
+        width: 100vw; */
         margin: 0;
         padding: 0;
     }
